[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stix4doge"
version = "0.0.1"
authors = [
  { name="DOGESEC", email="support@dogesec.com" },
]
description = "A package containing the stix definitions for custom objects used at dogesec"
#readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "stix2",
    "requests"
    ]
[project.urls]
Homepage = "https://github.com/muchdogesec/stix4doge"
Issues = "https://github.com/muchdogesec/stix4doge/issues"

# [tool.hatch.build.targets.wheel]
# packages = ["src"]